test-repo load - generates LoadArtifacts simulation

--- a/playbooks/roles/gatling/tasks/main.yml
+++ b/playbooks/roles/gatling/tasks/main.yml
@@ -1,7 +1,11 @@
 ---
 - name: Calculating Gatling version
   set_fact:
-    gatling_version: "{{ gatling.version | calculate( gatling.latest ) }}"
+    gatling_version:     "{{ gatling.version | calculate( gatling.latest ) }}"
+- set_fact:
+    gatling_home:        "{{ gatling.home }}/gatling-charts-highcharts-bundle-{{ gatling_version }}"
+- set_fact:
+    gatling_simulations: "{{ gatling_home }}/user-files/simulations"
 
 - include: "{{ common.utils.download }}"
   vars:
@@ -12,3 +16,5 @@
     env:     "{{ gatling_env }}"
     tests:
       - { run: "gatling.sh --help", expect: "Usage: compiler" }
+    cleanup:
+      - rm -rf "{{ gatling_simulations }}/computerdatabase"
