--- a/playbooks/roles/exhibitor/tasks/main.yml
+++ b/playbooks/roles/exhibitor/tasks/main.yml
@@ -4,18 +4,16 @@
 
 - name: Calculating Exhibitor version
   set_fact:
-    exhibitor_version: "{{ exhibitor.version | calculate( exhibitor.latest ) }}"
+    exhibitor_version: "{{ exhibitor_version | default( exhibitor.version | calculate( exhibitor.latest )) }}"
 - set_fact:
     exhibitor_port:    "{{ exhibitor_port | default( exhibitor.port ) }}"
     maven_repo:        "{{ maven_repo     | default( exhibitor.maven_repo )}}"
     exhibitor_jar:     "{{ exhibitor.home }}/build/libs/exhibitor-{{ exhibitor_version }}.jar"
 
-- stat: path={{ exhibitor_jar }}
+- stat:     path={{ exhibitor_jar }}
   register: exhibitor_jar_stat
 - set_fact: exhibitor_jar_missing="{{ not exhibitor_jar_stat.stat.exists | bool }}"
-
-- debug: var=exhibitor_jar
-- debug: var=exhibitor_jar_missing
+- debug:    var=exhibitor_jar_missing
 
 - file: path={{ exhibitor.home }} state=directory
 - name: Writing Exhibitor build file
