--- a/playbooks/roles/helios/meta/main.yml
+++ b/playbooks/roles/helios/meta/main.yml
@@ -1,3 +1,6 @@
 ---
 dependencies:
-  - { role: java, when: periodic }
+  - { role: java,      when: periodic }
+  - { role: zookeeper, when: periodic and (( helios_role is undefined ) or ( helios_role == 'master' )) }
+  - { role: exhibitor, when: periodic and (( helios_role is undefined ) or ( helios_role == 'master' )) }
+  - { role: skydns,    when: periodic and (( helios_role is undefined ) or ( helios_role == 'master' )) }
