--- a/playbooks/roles/test-repo/vars/main.yml
+++ b/playbooks/roles/test-repo/vars/main.yml
@@ -1,15 +1,21 @@
 ---
 test_repo: {
-  exhibitor: {
-    version: 1.5.2
-  },
-  sample_app: {
-    repo: '{{ common.urls.github }}/evgeny-goldin/continuous-delivery-jump-start.git',
-    sha:  00804350c5a632b85abde6333fe98d73a014c8fe,
-    home: /opt/continuous-delivery-jump-start
-  },
-  load: {
-    users:     30,
-    artifacts: "{{ gatling_home }}/load-artifacts.txt"
+  artifacts: /opt,
+  simulations: {
+    load_artifacts: {
+      name:      LoadArtifacts,
+      artifacts: all-artifacts.txt,
+      users:     1
+    },
+    get_artifacts_10: {
+      name:      GetArtifacts10,
+      artifacts: all-artifacts.txt,
+      users:     10
+    },
+    get_artifacts_30: {
+      name:      GetArtifacts30,
+      artifacts: all-artifacts.txt,
+      users:     30
+    }
   }
 }
