--- a/playbooks/roles/ansible/tasks/main.yml
+++ b/playbooks/roles/ansible/tasks/main.yml
@@ -9,6 +9,11 @@
     - python-pip
     - python-dev
 
+- name: Installing base pip packages
+  pip:  name={{ item }} state=latest
+  with_items:
+    - httplib2 # Missing on AWS Ubuntu AMI
+
 - name: Installing Ansible
   pip:  name=ansible version={{ ansible_version }} extra_args="--upgrade"
 
