--- a/playbooks/utils/download.yml
+++ b/playbooks/utils/download.yml
@@ -17,6 +17,9 @@
     unpack:     "{{ (( url is defined ) and ( archive is defined ) and ( home is defined )) | bool }}"
 - set_fact:
     clean_home: "{{ ( unpack | bool and ( clean | default(True))) | bool }}"
+    global_env: ( env is defined ) and ( env.global | default( True ))
+
+- debug: global_env
 
 # {{ env_file }} is a file containing service env variables, loaded by upstart script
 # {{ run_env }}  is an environment (dictionary) used when running {{ tests }} and {{ cleanup }} commands
@@ -77,7 +80,7 @@
   when: configs is defined
 
 - file: path="{{ env_file }}" state=absent
-  when: env is defined
+  when: env_file is defined
 
 - name: Generating {{ title }} environment variables file
   lineinfile:
@@ -85,7 +88,7 @@
     create:  yes
     line:    'export {{ item.key }}="{{ item.value }}"'
   with_dict: env | default({})
-  when:      env is defined
+  when: env_file is defined
 
 - name:        Running {{ title }} tests
   command:     "{{ ubuntu.bash }} -c '{{ item.run }} 2>&1'"
