--- a/playbooks/roles/tomcat/tasks/main.yml
+++ b/playbooks/roles/tomcat/tasks/main.yml
@@ -4,14 +4,17 @@
 
 - name: Calculating Tomcat version
   set_fact:
-    tomcat_version:  "{{ tomcat_version | default( tomcat.version ) | calculate( tomcat.latest ) }}"
+    tomcat_version:   "{{ tomcat_version | default( tomcat.version ) | calculate( tomcat.latest ) }}"
 - set_fact:
-    tomcat_port:     "{{ tomcat_port | default( tomcat.port ) }}"
-    tomcat_home:     "{{ tomcat.home }}/apache-tomcat-{{ tomcat_version }}"
+    tomcat_port:      "{{ tomcat_port      | default( tomcat.port ) }}"
+    catalina_options: "{{ catalina_options | default( '' ) }}"
+    tomcat_home:      "{{ tomcat.home }}/apache-tomcat-{{ tomcat_version }}"
 - set_fact:
-    tomcat_webapps:  "{{ tomcat_home }}/webapps"
-    tomcat_root_app: "{{ tomcat_home }}/webapps/ROOT"
-    tomcat_run:      "{{ tomcat_home }}/bin/catalina.sh run"
+    tomcat_webapps:   "{{ tomcat_home }}/webapps"
+    tomcat_root_app:  "{{ tomcat_home }}/webapps/ROOT"
+    tomcat_run:       "{{ tomcat_home }}/bin/catalina.sh run"
+
+- debug: msg="Setting up Tomcat to run on port {{ tomcat_port }} with Java options '{{ catalina_options }}'"
 
 - include: "{{ common.utils.download }}"
   vars:
@@ -22,6 +25,7 @@
     home:    "{{ tomcat.home }}"
     configs:
       - { role: tomcat, from: server.xml, to: "{{ tomcat_home }}/conf/server.xml" }
+      - { role: tomcat, from: setenv.sh,  to: "{{ tomcat_home }}/bin/setenv.sh" }
     cleanup:
       - rm    -rf '{{ tomcat_webapps }}' '{{ tomcat_home }}/temp' '{{ tomcat_home }}/work'
       - mkdir -p  '{{ tomcat_webapps }}' '{{ tomcat_home }}/temp' '{{ tomcat_home }}/work'
