--- a/playbooks/utils/download.yml
+++ b/playbooks/utils/download.yml
@@ -77,7 +77,7 @@
   when: configs is defined
 
 - file: path="{{ env_file }}" state=absent
-  when: env_file is defined
+  when: env is defined
 
 - name: Generating {{ title }} environment variables file
   lineinfile:
@@ -85,7 +85,7 @@
     create:  yes
     line:    'export {{ item.key }}="{{ item.value }}"'
   with_dict: env | default({})
-  when: env_file is defined
+  when: env is defined
 
 - name:        Running {{ title }} tests
   command:     "{{ ubuntu.bash }} -c '{{ item.run }} 2>&1'"
