--- a/playbooks/roles/nexus/tasks/standalone.yml
+++ b/playbooks/roles/nexus/tasks/standalone.yml
@@ -1,6 +1,8 @@
 ---
 - set_fact:
-    nexus_home: "{{ nexus.standalone.home }}/nexus-{{ nexus.version }}"
+    nexus_home:   "{{ nexus.standalone.home }}/nexus-{{ nexus.version }}"
+- set_fact:
+    wrapper_conf: "{{ nexus_home }}/bin/jsw/conf/wrapper.conf"
 
 - include: "{{ common.utils.service }}"
   vars:
@@ -9,11 +11,14 @@
     url:     "{{ nexus.standalone.url     | tokens( nexus ) }}"
     archive: "{{ nexus.standalone.archive | tokens( nexus ) }}"
     home:    "{{ nexus.standalone.home }}"
-    clean:   false
     env:
       RUN_AS_USER: root
     configs:
-      - { from: nexus.properties, to: "{{ nexus_home }}/conf/nexus.properties" }
+      - { from: nexus.properties,  to: "{{ nexus_home }}/conf/nexus.properties" }
+      - { from: update-wrapper.sh, to: "{{ nexus_home }}/update-wrapper.sh" }
+    cleanup:
+      - "chmod +x '{{ nexus_home }}/update-wrapper.sh'"
+      - "{{ nexus_home }}/update-wrapper.sh"
     command: "{{ nexus_home }}/bin/nexus console"
     port:    "{{ nexus_port }}"
     timeout: "{{ nexus.timeout }}"
