-server Java option given to both Artifactory and Nexus + default war java_options externalized to vars file

--- a/playbooks/roles/artifactory/vars/main.yml
+++ b/playbooks/roles/artifactory/vars/main.yml
@@ -14,9 +14,9 @@ artifactory: {
     home:    /opt/artifactory
   },
   war: {
-    url:     '{{ common.urls.jfrog }}/artifactory/libs-releases/org/artifactory/artifactory-web-war/<version>/artifactory-web-war-<version>.war',
-    archive: /opt/artifactory-<version>.war,
-    home:    artifactory
+    url:          '{{ common.urls.jfrog }}/artifactory/libs-releases/org/artifactory/artifactory-web-war/<version>/artifactory-web-war-<version>.war',
+    archive:      /opt/artifactory-<version>.war,
+    java_options: '-server -Xms512m -Xmx2g -Xss256k -XX:PermSize=128m -XX:MaxPermSize=256m -XX:+UseG1GC -Djruby.compile.invokedynamic=false'
   },
   wait: [
     { path: /artifactory/api/system/ping, content: OK }
