--- a/playbooks/roles/artifactory/tasks/war.yml
+++ b/playbooks/roles/artifactory/tasks/war.yml
@@ -2,7 +2,7 @@
 - include: "{{ common.roles.tomcat }}"
   vars:
     tomcat_port:   "{{ artifactory_port }}"
-    catalina_opts: "-server -Xms512m -Xmx2g -Xss256k -XX:PermSize=128m -XX:MaxPermSize=256m -XX:+UseG1GC -Djruby.compile.invokedynamic=false {{ java_options }}"
+    catalina_opts: "{{ artifactory.war.java_options }} {{ java_options }}"
 
 - include: "{{ common.utils.service }}"
   vars:
@@ -10,7 +10,7 @@
     title:   Artifactory
     url:     "{{ artifactory.war.url     | tokens({ 'version': artifactory_version }) }}"
     archive: "{{ artifactory.war.archive | tokens({ 'version': artifactory_version }) }}"
-    home:    "{{ tomcat_webapps }}/{{ artifactory.war.home }}"
+    home:    "{{ tomcat_webapps }}/artifactory"
     command: "{{ tomcat_run }}"
     port:    "{{ artifactory_port }}"
     timeout: "{{ artifactory.timeout }}"
