--- a/playbooks/roles/test-repo/vars/main.yml
+++ b/playbooks/roles/test-repo/vars/main.yml
@@ -2,24 +2,12 @@
 test_repo: {
   artifacts: /opt,
   simulations: {
-    Load: {
-      artifacts: all-artifacts.txt,
+    Warmup: {
+      artifacts: all-artifacts-size-sorted.txt,
       users:     1
-    },
-    Get1: {
-      artifacts: all-artifacts.txt,
-      users:     1
-    },
-    Get5: {
-      artifacts: all-artifacts.txt,
-      users:     5
-    },
-    Get10: {
-      artifacts: all-artifacts.txt,
-      users:     10
     },
     Get30: {
-      artifacts: all-artifacts.txt,
+      artifacts: all-artifacts-name-sorted.txt,
       users:     30
     }
   }
