--- a/playbooks/roles/tomcat/tasks/main.yml
+++ b/playbooks/roles/tomcat/tasks/main.yml
@@ -14,7 +14,7 @@
     tomcat_root_app: "{{ tomcat_home }}/webapps/ROOT"
     tomcat_run:      "{{ tomcat_home }}/bin/catalina.sh run"
 
-- debug: msg="Setting up Tomcat to run on port {{ tomcat_port }} with Java options '{{ catalina_opts }}'"
+- debug: msg="Running Tomcat on port {{ tomcat_port }}, Java options '{{ catalina_opts }}'"
 
 - include: "{{ common.utils.download }}"
   vars:
