--- a/playbooks/roles/test-repo/vars/main.yml
+++ b/playbooks/roles/test-repo/vars/main.yml
@@ -1,6 +1,7 @@
 ---
 test_repo: {
   artifacts: /opt,
+  log:       /opt/gatling.log,
   simulations: [
     { name: Warmup,  users: 1,   artifacts: all-artifacts-size-sorted.txt },
     { name: Get10,   users: 10,  artifacts: all-artifacts-name-sorted.txt },
